# Semester-5

./: CursorMovment.cpp  DS  DS.cpp  client.c  hangman  hangman.cpp  server.c  test  test.cpp  test2  test2.cpp
CNET_Lab/: Lab 4.pptx  Week 06_ Wireshark Tutorial.pptx  Week 6.pptx  client.c  client2  client2.c  server.c  server2  server2.c
CNET_Lab/Lab1/: client  client.c  q1.c  server
CNET_Lab/Lab2/: client.c  q2client  q2client.c  q2server  server.c
CNET_Lab/Project/: i221169_C.pkt
CNET_Lab/i221169_Lab2/: client  client.c  practiceserver.c  q2server.c  server  server.c
CNET_Lab/i221169_Lab3/: client  server
CNET_Lab/i221169_Lab4/: client.c  client1  server  server.c
CNET_Lab/i221169_Lab5/: i221169_WireShark Lab-07.docx
CNET_Lab/lab2_practice/: client  client.c  (+2 more)
Freelancing/volley-main/: CMakeLists.txt  command.txt
Freelancing/volley-main/include/: Menu.hpp  assets.hpp  ball.hpp  constants.hpp  pauseMenu.hpp  volley.hpp
Freelancing/volley-main/src/: ball.cpp  entity.cpp  main.cpp  menu.cpp  pauseMenu.cpp  score.cpp  sound.cpp  utils.cpp  volley.cpp
Monopoly/: mono  monopoly
Numerical/: Week (2)NC.ipynb  Week3_plus.ipynb  Week_1_Lecture_1NC.ipynb  assign01_NC.ipynb
PF_Project/: AdminFeatures.cpp  AdminFeatures.h  BulkImportProducts.txt  Inventory.cpp  Inventory.h  SecureShop  SecureShop.cpp  UserAuthentication.cpp  UserAuthentication.h  run.txt
SDA/: AllQuizes.docx  Class Activity.docx
SecureShop/: ShoppingFeatures.cpp
TA/: CursorMovment.cpp
TBW/: Project Phase 1 (Instructions).docx
lab2/: emulator.cpp  emulator.h  instructions.cpp
(+271 files in other folders)
